# OC_lab3

./: .gitignore  CMakeLists.txt  README.md  build.sh  win_build.bat
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  chidren.hpp  children.cpp  cli.cpp  cli.hpp  core_api.hpp  logger.cpp  logger.hpp  master.cpp  master.hpp  shared.cpp  shared.hpp  timeutil.cpp  timeutil.hpp
